services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-test
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
      app: a-nginx
